[gd_scene load_steps=3 format=3 uid="uid://de0pl4o0ok7gi"]

[ext_resource type="Script" uid="uid://djinvx455fd5u" path="res://Scenes/UserPlayUI/BottomMenu/control.gd" id="1_nqw61"]
[ext_resource type="Theme" uid="uid://dyecspj1ytyh5" path="res://Themes/bottom_buttons.tres" id="2_mmtfj"]

[node name="BottomMenu" type="Node2D"]

[node name="buttons" type="Control" parent="."]
top_level = true
layout_mode = 3
anchors_preset = 0
offset_top = 1039.0
offset_right = 1920.0
offset_bottom = 1079.0
script = ExtResource("1_nqw61")

[node name="save_button" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 968.0
offset_right = 1059.0
offset_bottom = 40.0
theme = ExtResource("2_mmtfj")
text = "Save"
autowrap_mode = 3

[node name="load_button" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 1059.0
offset_right = 1150.0
offset_bottom = 40.0
theme = ExtResource("2_mmtfj")
text = "Load"
autowrap_mode = 3

[node name="skip_button" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 1150.0
offset_right = 1241.0
offset_bottom = 40.0
theme = ExtResource("2_mmtfj")
text = "Skip"
autowrap_mode = 3

[node name="title_button" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 1241.0
offset_right = 1332.0
offset_bottom = 40.0
theme = ExtResource("2_mmtfj")
text = "Title"
autowrap_mode = 3

[node name="qsave_button" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 786.0
offset_right = 877.0
offset_bottom = 40.0
theme = ExtResource("2_mmtfj")
text = "QSave"
autowrap_mode = 3

[node name="qload_button" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 877.0
offset_right = 968.0
offset_bottom = 40.0
theme = ExtResource("2_mmtfj")
text = "QLoad"
autowrap_mode = 3

[node name="set_button" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 1332.0
offset_right = 1423.0
offset_bottom = 40.0
theme = ExtResource("2_mmtfj")
text = "Settings"
autowrap_mode = 3

[node name="x_button" type="Button" parent="buttons"]
layout_mode = 0
offset_left = 1423.0
offset_right = 1514.0
offset_bottom = 40.0
theme = ExtResource("2_mmtfj")
text = "X"
autowrap_mode = 3

[connection signal="pressed" from="buttons/save_button" to="buttons" method="_on_save_button_pressed"]
[connection signal="pressed" from="buttons/load_button" to="buttons" method="_on_load_button_pressed"]
[connection signal="pressed" from="buttons/title_button" to="buttons" method="_on_title_button_pressed"]
[connection signal="pressed" from="buttons/qsave_button" to="buttons" method="_on_qsave_button_pressed"]
[connection signal="pressed" from="buttons/qload_button" to="buttons" method="_on_qload_button_pressed"]
[connection signal="pressed" from="buttons/set_button" to="buttons" method="_on_set_button_pressed"]
[connection signal="pressed" from="buttons/x_button" to="buttons" method="_on_x_button_pressed"]
